# Extraclase-II-Datos-II

./: .gitignore  Guía para el uso de jira.pptx  README.md
Patron Adapter/: Adapter.cpp
Patrones/: CMakeLists.txt  main.cpp  observador.cpp  observador.hpp  pasajeros.cpp  pasajeros.hpp  vuelo.cpp  vuelo.hpp
build-Patrones-Desktop-Debug/: Patrones  Patrones.cbp
build-Patrones-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-08845d431ee1c4aa135b.json  cmakeFiles-v1-019dd33e5df04d545f66.json  codemodel-v2-c37bcdc0ad27fb697b35.json  index-2020-05-07T21-21-42-0426.json  target-Patrones-Debug-302b130a402548611408.json  target-Patrones_autogen-Debug-1afcee63445345bab2a3.json
